# bmstu-rsoi-lab1

./: .gitignore  Cargo.toml  Dockerfile  diesel.toml
.github/workflows/: main-ci.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
postman/: [inst][heroku] Lab1.postman_environment.json
src/: data_access.rs  integration_tests.rs  main.rs  model.rs  routes.rs  schema.rs
workflows/: main-ci.yml
