[package]
name = "bmstu-rsoi-lab1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
diesel = "2.2.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
utoipa = { version = "5.0.0-beta.0", features = ["axum_extras"] }
utoipa-axum = "0.1.0-beta.2"
utoipa-swagger-ui = { version = "7.1.1-beta.0", features = ["axum"] }
