[package]
name = "bmstu-rsoi-lab1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
diesel = { version = "2.2.4", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
http-body-util = "0.1.2"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
testcontainers-modules = { version = "0.11.3", features = ["postgres"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower = { version = "0.5.1", features = ["tokio"] }
utoipa = { version = "5.0.0-beta.0", features = ["axum_extras"] }
utoipa-axum = "0.1.0-beta.2"
utoipa-swagger-ui = { version = "7.1.1-beta.0", features = ["axum"] }

[dev-dependencies]
testcontainers = "0.23.1"

